--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,11 +104,11 @@ CurrentRotGridSize=0
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/Levels/BlockOut
-MRUItem2=/Game/Levels/assetlayout
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/Levels/texturedzoo
+MRUItem0=/Game/Levels/texturedzoo
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/Levels/BlockOut
+MRUItem3=/Game/Levels/assetlayout
+MRUItem4=/Game/Levels/Demo
 MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem6=/Game/Levels/MainMenu
 MRUItem7=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -244,10 +244,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Models/finishedassets/ankh
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/Levels/texturedzoo
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3455,6 +3455,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/finishedassets/ankh/ankh_ben_wilkinson_010519.ankh_ben_wilkinson_010519;
 RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_11
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
@@ -3474,7 +3475,6 @@ RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
 RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
-RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3525,11 +3525,11 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/Levels/BlockOut
-MRUItem2=/Game/Levels/assetlayout
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/Levels/texturedzoo
+MRUItem0=/Game/Levels/texturedzoo
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/Levels/BlockOut
+MRUItem3=/Game/Levels/assetlayout
+MRUItem4=/Game/Levels/Demo
 MRUItem5=/Game/David-o020107h/Audio/Egypt_intro
 MRUItem6=/Game/David-o020107h/Audio/Egypt_intro_Cue
 MRUItem7=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
