--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,10 +104,10 @@ CurrentRotGridSize=0
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/texturedzoo
-MRUItem2=/Game/Levels/Temple-Area
-MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Area1-Rework
+MRUItem2=/Game/Levels/texturedzoo
+MRUItem3=/Game/Levels/Temple-Area
 MRUItem4=/Game/Levels/Demo
 MRUItem5=/Game/Levels/Area2-Market
 MRUItem6=/Game/Levels/MechanicsLevel
@@ -274,7 +274,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -297,11 +297,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area1-Rework
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2953,6 +2954,47 @@ Emitter.Activation=True
 Emitter.Cooking=True
 Emitter.Emitter=True
 Emitter.Actor=True
+REINST_TopDownCharacter_C_136.None=True
+REINST_TopDownCharacter_C_136.Tick=True
+REINST_TopDownCharacter_C_136.Character=True
+REINST_TopDownCharacter_C_136.Camera=True
+REINST_TopDownCharacter_C_136.Pawn=True
+REINST_TopDownCharacter_C_136.Rendering=True
+REINST_TopDownCharacter_C_136.Replication=True
+REINST_TopDownCharacter_C_136.Input=True
+REINST_TopDownCharacter_C_136.Actor=True
+REINST_TopDownCharacter_C_152.None=True
+REINST_TopDownCharacter_C_152.Tick=True
+REINST_TopDownCharacter_C_152.Replication=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+REINST_TopDownCharacter_C_168.None=True
+REINST_TopDownCharacter_C_168.Tick=True
+REINST_TopDownCharacter_C_168.Character=True
+REINST_TopDownCharacter_C_168.Camera=True
+REINST_TopDownCharacter_C_168.Pawn=True
+REINST_TopDownCharacter_C_168.Rendering=True
+REINST_TopDownCharacter_C_168.Replication=True
+REINST_TopDownCharacter_C_168.Input=True
+REINST_TopDownCharacter_C_168.Actor=True
+REINST_TopDownCharacter_C_184.None=True
+REINST_TopDownCharacter_C_184.Tick=True
+REINST_TopDownCharacter_C_184.Character=True
+REINST_TopDownCharacter_C_184.Camera=True
+REINST_TopDownCharacter_C_184.Pawn=True
+REINST_TopDownCharacter_C_184.Rendering=True
+REINST_TopDownCharacter_C_184.Replication=True
+REINST_TopDownCharacter_C_184.Input=True
+REINST_TopDownCharacter_C_184.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3068,6 +3110,9 @@ None=======
 /Game/EnemyAgent/EnemyData.EnemyData=1
 /Game/Models/finishedassets/flowers/MediumCactus.MediumCactus=1
 /Game/Models/finishedassets/watersupply/NewMaterial.NewMaterial=1
+/Game/b024899h/Particle_Effects/Portal/PortalEffect.PortalEffect=0
+/Game/b024899h/Particle_Effects/PushBack/PortalEffect.PortalEffect=0
+/Game/b024899h/Particle_Effects/PushBack/PushMat.PushMat=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3197,6 +3242,9 @@ StaticMeshActor=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[0]\" "
 ThirdPerson_AnimBP_C=
 AnimInstance=
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3226,7 +3274,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3911,6 +3959,10 @@ AnimationBlueprintEditor.TimeStamp=2018.09.20-07.56.05
 AnimationBlueprintEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2018.09.20-07.56.07
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2018.09.20-07.56.09
+DistCurveEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3970,6 +4022,9 @@ LastLogListing=LightingResults
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/b024899h/Particle_Effects/PushBack/Nuke.Nuke;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/PushBack/PortalEffect.PortalEffect;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/Portal/PortalEffect.PortalEffect;
 RecentlyPlaced=/Game/Models/finishedassets/archway/Arch_way.Arch_way;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel.LP_barrel;
@@ -3987,9 +4042,6 @@ RecentlyPlaced=/Game/T019847G/FadingMeshes/NewFade_M.NewFade_M;
 RecentlyPlaced=/Game/Materials/Green.Green;
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw;
-RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
-RecentlyPlaced=/Game/Models/finishedassets/weapontack/WR_Un.WR_Un;
-RecentlyPlaced=/Game/Models/weapons/LP_dagger.LP_dagger;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4044,26 +4096,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/finishedassets/watersupply/NewMaterial
-MRUItem1=/Game/Levels/Area1-Rework
-MRUItem2=/Game/Levels/texturedzoo
-MRUItem3=/Game/Levels/Temple-Area
-MRUItem4=/Game/Models/finishedassets/flowers/MediumCactus
-MRUItem5=/Game/AIAgent/AIbot
-MRUItem6=/Game/EnemyAgent/EnemyStats
-MRUItem7=/Game/EnemyAgent/EnemyData
-MRUItem8=/Game/AIAgent/BaseAI
-MRUItem9=/Game/AIAgent/I_Animation
-MRUItem10=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
-MRUItem11=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem12=/Game/Mannequin/Animations/ThirdPerson_AnimBP
-MRUItem13=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
-MRUItem14=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem15=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem16=/Game/T019847G/FadingMeshes/NewFade_M
-MRUItem17=/Game/T019847G/FadingMeshes/MaterialParameter
-MRUItem18=/Game/T019847G/FadingMeshes/Fade_M
-MRUItem19=/Game/T019847G/FadingMeshes/Fade_Inst
+MRUItem0=/Game/b024899h/Particle_Effects/PushBack/PortalEffect
+MRUItem1=/Game/b024899h/Particle_Effects/PushBack/PushMat
+MRUItem2=/Game/b024899h/Particle_Effects/Portal/PortalEffect
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/Models/finishedassets/watersupply/NewMaterial
+MRUItem5=/Game/Levels/Area1-Rework
+MRUItem6=/Game/Levels/texturedzoo
+MRUItem7=/Game/Levels/Temple-Area
+MRUItem8=/Game/Models/finishedassets/flowers/MediumCactus
+MRUItem9=/Game/AIAgent/AIbot
+MRUItem10=/Game/EnemyAgent/EnemyStats
+MRUItem11=/Game/EnemyAgent/EnemyData
+MRUItem12=/Game/AIAgent/BaseAI
+MRUItem13=/Game/AIAgent/I_Animation
+MRUItem14=/Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset
+MRUItem15=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem16=/Game/Mannequin/Animations/ThirdPerson_AnimBP
+MRUItem17=/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D
+MRUItem18=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem19=/Game/T019847G/FadingMeshes/NewFade_M
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -4255,5 +4307,38 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
