--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,16 +103,16 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/texturedzoo
-MRUItem2=/Game/Levels/TerrainMap
-MRUItem3=/Game/Levels/Temple-Area
-MRUItem4=/Game/Levels/Area2-MarketMeshStart
-MRUItem5=/Game/Levels/Area2-Market
-MRUItem6=/Game/Levels/Demo
-MRUItem7=/Game/Levels/MechanicsLevel
-MRUItem8=/Game/Levels/MainMenu
-MRUItem9=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Area1-Rework
+MRUItem2=/Game/Levels/texturedzoo
+MRUItem3=/Game/Levels/TerrainMap
+MRUItem4=/Game/Levels/Temple-Area
+MRUItem5=/Game/Levels/Area2-MarketMeshStart
+MRUItem6=/Game/Levels/Area2-Market
+MRUItem7=/Game/Levels/Demo
+MRUItem8=/Game/Levels/MechanicsLevel
+MRUItem9=/Game/Levels/MainMenu
 MRUItem10=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem11=/Game/Levels/BlockOut
 
@@ -259,7 +259,9 @@ BossController_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultVa
 Crystal_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 Proto_controller_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 Landscape=Landscape.Collision.Collision,
-PostProcessComponent=PostProcessComponent.Color Grading.Color Grading|Misc,PostProcessComponent.Lens.Lens|Chromatic Aberration,PostProcessComponent.Lens.Lens|BloomAdvanced,PostProcessComponent.Lens.Lens|Bloom,PostProcessComponent.Lens.Lens|Dirt Mask,PostProcessComponent.Lens.Lens|Camera,PostProcessComponent.Lens.Lens|ExposureAdvanced,PostProcessComponent.Lens.Lens|Exposure,PostProcessComponent.Lens.Lens|Lens Flares,PostProcessComponent.Lens.Lens|Depth of FieldAdvanced,PostProcessComponent.Lens.Lens|Depth of Field,PostProcessComponent.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessComponent.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessComponent.Rendering Features.Rendering Features|Global Illumination,PostProcessComponent.Rendering Features.Rendering Features|Motion Blur,PostProcessComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessComponent.Rendering Features.Rendering Features|Light Propagation Volume,
+PostProcessComponent=PostProcessComponent.Color Grading.Color Grading
+Destructable_Barrel_C=
+DestructibleComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -284,7 +286,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Foliage/Crystals
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -307,7 +309,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area1-Rework
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -4366,6 +4368,37 @@ PostProcessComponent.Cooking=True
 PostProcessComponent.Events=True
 PostProcessComponent.Physics=True
 PostProcessComponent.Collision=True
+DestructibleMesh.Damage=True
+DestructibleMesh.Debris=True
+DestructibleMesh.Flags=True
+DestructibleMesh.HierarchyDepth=True
+DestructibleMesh.Effects=True
+DestructibleMesh.SkeletalMesh=True
+DestructibleMesh.LODSettings=True
+DestructibleMesh.Animation=True
+DestructibleMesh.ImportSettings=True
+DestructibleMesh.Sampling=True
+DestructibleFractureSettings.Voronoi=True
+DestructibleFractureSettings.General=True
+Destructable_Barrel_C.Tick=True
+Destructable_Barrel_C.Rendering=True
+Destructable_Barrel_C.Replication=True
+Destructable_Barrel_C.Input=True
+Destructable_Barrel_C.Actor=True
+DestructibleComponent.Variable=True
+DestructibleComponent.TransformCommon=True
+DestructibleComponent.Sockets=True
+DestructibleComponent.DestructibleComponent=True
+DestructibleComponent.Physics=True
+DestructibleComponent.Collision=True
+DestructibleComponent.Lighting=True
+DestructibleComponent.Rendering=True
+DestructibleComponent.Tags=True
+DestructibleComponent.ComponentReplication=True
+DestructibleComponent.Cooking=True
+DestructibleComponent.Events=True
+DestructibleComponent.Materials=True
+Destructable_Barrel_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -4566,18 +4599,22 @@ None=======
 /Game/Foliage/Crystals/CrytalshardClusterPurple1.CrytalshardClusterPurple1=0
 /Game/Foliage/Crystals/CrytalshardClusterBlue.CrytalshardClusterBlue=1
 /Game/Foliage/Crystals/CrytalShard-blue.CrytalShard-blue=1
+/Game/EnemyAgent/CorruptedSlave.CorruptedSlave=1
+/Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM=1
+/Game/Will/Destructable_Barrel.Destructable_Barrel=0
 
 [PluginBrowser]
-InstalledPlugins=Substance
+InstalledPlugins=DialoguePlugin
+InstalledPlugins=ParticleText
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" \"Object.Blackboard.Keys.Keys[3].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" \"Object.Blackboard.Keys.Keys[3].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -4721,6 +4758,10 @@ REINST_BossAI_C_819="\"Object.Character.Mesh.Object.Collision.BodyInstance.Colli
 REINST_BossAI_C_825="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 REINST_BossAI_C_919="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PostProcessComponent="\"Object.Settings.FilmWhitePoint\" \"Object.Settings.FilmShadowTint\" \"Object.Settings.FilmChannelMixerRed\" \"Object.Settings.FilmChannelMixerGreen\" \"Object.Settings.FilmChannelMixerBlue\" \"Object.Settings.SceneColorTint\" \"Object.Settings.Bloom1Tint\" \"Object.Settings.Bloom2Tint\" \"Object.Settings.Bloom3Tint\" \"Object.Settings.Bloom4Tint\" \"Object.Settings.Bloom5Tint\" \"Object.Settings.Bloom6Tint\" \"Object.Settings.BloomDirtMaskTint\" \"Object.Settings.AmbientCubemapTint\" \"Object.Settings.LensFlareTint\" \"Object.Settings.LensFlareTints\" \"Object.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.Settings.IndirectLightingColor\" \"Object.Settings.WeightedBlendables\" \"Object.Settings.WeightedBlendables.Array\" "
+DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[5]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[5]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+DestructibleComponent=
+SkinnedMeshComponent=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4753,7 +4794,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/Toyes/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -5440,6 +5481,10 @@ PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
 PortalProxies.TimeStamp=2019.04.08-20.16.08
 PortalProxies.LastCompileMethod=Unknown
+ApexDestruction.TimeStamp=2018.09.21-08.18.23
+ApexDestruction.LastCompileMethod=Unknown
+ApexDestructionEditor.TimeStamp=2018.09.21-08.18.23
+ApexDestructionEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -5492,13 +5537,15 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Will/Destructable_Barrel.Destructable_Barrel;
+RecentlyPlaced=/Game/rubble/Rubble_Pile.Rubble_Pile;
 RecentlyPlaced=/Game/Foliage/Crystals/Blue-strangeCrystal.Blue-strangeCrystal;
 RecentlyPlaced=/Game/Foliage/Crystals/Pink-strangeCrystal.Pink-strangeCrystal;
 RecentlyPlaced=/Game/Foliage/Crystals/Pink-PurpleCrystal.Pink-PurpleCrystal;
@@ -5517,8 +5564,6 @@ RecentlyPlaced=/Game/Foliage/Crystals/CrytalShard-Purple.CrytalShard-Purple;
 RecentlyPlaced=/Game/Foliage/Crystals/CrytalShardClusterStrange.CrytalShardClusterStrange;
 RecentlyPlaced=/Game/Foliage/Crystals/CrytalShard-blue.CrytalShard-blue;
 RecentlyPlaced=/Game/Foliage/Crystals/CrytalshardClusterBlue.CrytalshardClusterBlue;
-RecentlyPlaced=/Game/Foliage/Crystals/PurpleCrystal.PurpleCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Purple-StrangeCrystal.Purple-StrangeCrystal;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -5574,26 +5619,26 @@ bFilterTranslucent=True
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Foliage/Crystals/CrytalShard-blue
-MRUItem1=/Game/Foliage/Crystals/CrytalshardClusterBlue
-MRUItem2=/Game/Foliage/Crystals/ExposedCrystalstrange
-MRUItem3=/Game/Foliage/Crystals/CrytalshardClusterPurple1
-MRUItem4=/Game/Models/finishedassets/trent/tent_open_low
-MRUItem5=/Game/Models/Jack/Rock_Rubble
-MRUItem6=/Game/Models/Jack/Rock_Form_3
-MRUItem7=/Game/Models/Jack/Rock_Form_2
-MRUItem8=/Game/Models/Jack/Rock_Form_1
-MRUItem9=/Game/Models/finishedassets/rocks/Rocks_Small_3
-MRUItem10=/Game/Models/finishedassets/scaffold/scaffold_wide_short_scaffold_wide_short
-MRUItem11=/Game/T015548H/PurpleInstance
-MRUItem12=/Game/T015548H/RenderThroughWall
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem14=/Game/Models/weapons/shield
-MRUItem15=/Game/Levels/Area1-Rework
-MRUItem16=/Game/Models/finishedassets/torch/walltorch
-MRUItem17=/Game/Models/finishedassets/sacraficetable/Sacra_Table
-MRUItem18=/Game/Models/finishedassets/shield/shield
-MRUItem19=/Game/Levels/texturedzoo
+MRUItem0=/Game/Will/Destructable_Barrel
+MRUItem1=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem2=/Game/EnemyAgent/CorruptedSlave
+MRUItem3=/Game/Levels/Area1-Rework
+MRUItem4=/Game/Foliage/Crystals/CrytalShard-blue
+MRUItem5=/Game/Foliage/Crystals/CrytalshardClusterBlue
+MRUItem6=/Game/Foliage/Crystals/ExposedCrystalstrange
+MRUItem7=/Game/Foliage/Crystals/CrytalshardClusterPurple1
+MRUItem8=/Game/Models/finishedassets/trent/tent_open_low
+MRUItem9=/Game/Models/Jack/Rock_Rubble
+MRUItem10=/Game/Models/Jack/Rock_Form_3
+MRUItem11=/Game/Models/Jack/Rock_Form_2
+MRUItem12=/Game/Models/Jack/Rock_Form_1
+MRUItem13=/Game/Models/finishedassets/rocks/Rocks_Small_3
+MRUItem14=/Game/Models/finishedassets/scaffold/scaffold_wide_short_scaffold_wide_short
+MRUItem15=/Game/T015548H/PurpleInstance
+MRUItem16=/Game/T015548H/RenderThroughWall
+MRUItem17=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem18=/Game/Models/weapons/shield
+MRUItem19=/Game/Models/finishedassets/torch/walltorch
 
 [WidgetTemplatesExpanded]
 Extra=False
