Dialog Plugin Enabled

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4399,6 +4399,11 @@ DestructibleComponent.Cooking=True
 DestructibleComponent.Events=True
 DestructibleComponent.Materials=True
 Destructable_Barrel_C.TransformCommon=True
+CheckpointMarker_C.TransformCommon=True
+CheckpointMarker_C.Default=True
+CheckpointMarker_C.Rendering=True
+CheckpointMarker_C.Input=True
+CheckpointMarker_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -4659,7 +4664,7 @@ REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
-BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
+BaseWeapon_C=
 TestPawn3_C=
 StaticMeshComponent=
 MeshComponent=
@@ -5485,6 +5490,10 @@ ApexDestruction.TimeStamp=2018.09.21-08.18.23
 ApexDestruction.LastCompileMethod=Unknown
 ApexDestructionEditor.TimeStamp=2018.09.21-08.18.23
 ApexDestructionEditor.LastCompileMethod=Unknown
+DialoguePlugin.TimeStamp=2019.05.19-18.43.49
+DialoguePlugin.LastCompileMethod=Unknown
+DialoguePluginEditor.TimeStamp=2019.05.19-18.43.51
+DialoguePluginEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
