custom dialogs added from plugin

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 Perception_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
@@ -262,6 +262,8 @@ Landscape=Landscape.Collision.Collision,
 PostProcessComponent=PostProcessComponent.Color Grading.Color Grading
 Destructable_Barrel_C=
 DestructibleComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
+MyReplyWidget_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
+DemoReplyWidget_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -286,7 +288,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/DialoguePlugin/UI
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -312,7 +314,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
@@ -4404,6 +4406,29 @@ CheckpointMarker_C.Default=True
 CheckpointMarker_C.Rendering=True
 CheckpointMarker_C.Input=True
 CheckpointMarker_C.Actor=True
+MyDialogueWidget_C.Default=True
+MyDialogueWidget_C.Dialogue UI=True
+MyDialogueWidget_C.Appearance=True
+MyDialogueWidget_C.Designer=True
+MyDialogueWidget_C.Input=True
+MyDialogueWidget_C.Interaction=True
+MyDialogueWidget_C.Performance=True
+MyDialogueWidget_C.Layout=True
+MyDialogueWidget_C.Behavior=True
+MyDialogueWidget_C.Render Transform=True
+MyDialogueWidget_C.Clipping=True
+MyDialogueWidget_C.Navigation=True
+MyReplyWidget_C.Default=True
+MyReplyWidget_C.Appearance=True
+MyReplyWidget_C.Designer=True
+MyReplyWidget_C.Input=True
+MyReplyWidget_C.Interaction=True
+MyReplyWidget_C.Performance=True
+MyReplyWidget_C.Layout=True
+MyReplyWidget_C.Behavior=True
+MyReplyWidget_C.Render Transform=True
+MyReplyWidget_C.Clipping=True
+MyReplyWidget_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -4607,6 +4632,10 @@ None=======
 /Game/EnemyAgent/CorruptedSlave.CorruptedSlave=1
 /Game/Models/finishedassets/barrel/LP_barrel_DM.LP_barrel_DM=1
 /Game/Will/Destructable_Barrel.Destructable_Barrel=0
+/DialoguePlugin/UI/DemoDialogueWidget.DemoDialogueWidget=1
+/DialoguePlugin/UI/DemoReplyWidget.DemoReplyWidget=1
+/Game/Dialogs/MyDialogueWidget.MyDialogueWidget=0
+/Game/Dialogs/MyReplyWidget.MyReplyWidget=0
 
 [PluginBrowser]
 InstalledPlugins=DialoguePlugin
@@ -4614,7 +4643,7 @@ InstalledPlugins=ParticleText
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.OwnerWidget\" \"Object.OwnerWidget\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
@@ -4680,8 +4709,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.OwnerWidget\" \"Object.OwnerWidget\" "
+Visual="\"Object.OwnerWidget\" \"Object.OwnerWidget\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
@@ -4690,7 +4719,7 @@ ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.OwnerWidget\" \"Object.OwnerWidget\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI"
@@ -4767,6 +4796,9 @@ DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthP
 SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParameters.DepthParameters[1]\" \"Object.Effects.FractureEffects.FractureEffects[1]\" \"Object.SkeletalMesh.Materials.Materials[5]\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 DestructibleComponent=
 SkinnedMeshComponent=
+MyDialogueWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+DialogueUserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+MyReplyWidget_C="\"Object.OwnerWidget\" \"Object.OwnerWidget\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -5551,6 +5583,7 @@ LastLogListing=PIE
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
+/Game/Dialogs=(R=0.500000,G=0.000000,B=0.325782,A=1.000000)
 
 [PlacementMode]
 RecentlyPlaced=/Game/Will/Destructable_Barrel.Destructable_Barrel;
@@ -5628,26 +5661,26 @@ bFilterTranslucent=True
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Will/Destructable_Barrel
-MRUItem1=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem2=/Game/EnemyAgent/CorruptedSlave
-MRUItem3=/Game/Levels/Area1-Rework
-MRUItem4=/Game/Foliage/Crystals/CrytalShard-blue
-MRUItem5=/Game/Foliage/Crystals/CrytalshardClusterBlue
-MRUItem6=/Game/Foliage/Crystals/ExposedCrystalstrange
-MRUItem7=/Game/Foliage/Crystals/CrytalshardClusterPurple1
-MRUItem8=/Game/Models/finishedassets/trent/tent_open_low
-MRUItem9=/Game/Models/Jack/Rock_Rubble
-MRUItem10=/Game/Models/Jack/Rock_Form_3
-MRUItem11=/Game/Models/Jack/Rock_Form_2
-MRUItem12=/Game/Models/Jack/Rock_Form_1
-MRUItem13=/Game/Models/finishedassets/rocks/Rocks_Small_3
-MRUItem14=/Game/Models/finishedassets/scaffold/scaffold_wide_short_scaffold_wide_short
-MRUItem15=/Game/T015548H/PurpleInstance
-MRUItem16=/Game/T015548H/RenderThroughWall
-MRUItem17=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem18=/Game/Models/weapons/shield
-MRUItem19=/Game/Models/finishedassets/torch/walltorch
+MRUItem0=/Game/Dialogs/MyDialogueWidget
+MRUItem1=/Game/Dialogs/MyReplyWidget
+MRUItem2=/DialoguePlugin/UI/DemoReplyWidget
+MRUItem3=/DialoguePlugin/UI/DemoDialogueWidget
+MRUItem4=/Game/Will/Destructable_Barrel
+MRUItem5=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem6=/Game/EnemyAgent/CorruptedSlave
+MRUItem7=/Game/Levels/Area1-Rework
+MRUItem8=/Game/Foliage/Crystals/CrytalShard-blue
+MRUItem9=/Game/Foliage/Crystals/CrytalshardClusterBlue
+MRUItem10=/Game/Foliage/Crystals/ExposedCrystalstrange
+MRUItem11=/Game/Foliage/Crystals/CrytalshardClusterPurple1
+MRUItem12=/Game/Models/finishedassets/trent/tent_open_low
+MRUItem13=/Game/Models/Jack/Rock_Rubble
+MRUItem14=/Game/Models/Jack/Rock_Form_3
+MRUItem15=/Game/Models/Jack/Rock_Form_2
+MRUItem16=/Game/Models/Jack/Rock_Form_1
+MRUItem17=/Game/Models/finishedassets/rocks/Rocks_Small_3
+MRUItem18=/Game/Models/finishedassets/scaffold/scaffold_wide_short_scaffold_wide_short
+MRUItem19=/Game/T015548H/PurpleInstance
 
 [WidgetTemplatesExpanded]
 Extra=False
