--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,11 +104,11 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Area2-MarketMeshStart
 MRUItem2=/Game/Levels/texturedzoo
-MRUItem3=/Game/Levels/TerrainMap
-MRUItem4=/Game/Levels/Temple-Area
-MRUItem5=/Game/Levels/Area2-MarketMeshStart
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem4=/Game/Levels/TerrainMap
+MRUItem5=/Game/Levels/Temple-Area
 MRUItem6=/Game/Levels/Area2-Market
 MRUItem7=/Game/Levels/Demo
 MRUItem8=/Game/Levels/MechanicsLevel
@@ -320,6 +320,7 @@ LastLevel=/Game/Levels/Area1-Rework
 CleanShutdown=True
 None=======
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -4716,6 +4717,7 @@ None=======
 /Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon=0
 /Game/Will/Miner.Miner=0
 /Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble=0
+/Game/Models/Jack/Bag_of_Food_1_Unwrapped.Bag_of_Food_1_Unwrapped=1
 
 [PluginBrowser]
 InstalledPlugins=DialoguePlugin
@@ -4723,12 +4725,12 @@ InstalledPlugins=ParticleText
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[2].KeyType\" \"Object.Blackboard.Keys.Keys[3].KeyType\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -4915,7 +4917,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/Toyes/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -5602,10 +5604,10 @@ PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
 PortalProxies.TimeStamp=2019.04.08-20.16.08
 PortalProxies.LastCompileMethod=Unknown
-ApexDestruction.TimeStamp=2018.09.21-08.18.23
-ApexDestruction.LastCompileMethod=Unknown
-ApexDestructionEditor.TimeStamp=2018.09.21-08.18.23
-ApexDestructionEditor.LastCompileMethod=Unknown
+ApexDestruction.TimeStamp=2019.04.08-20.29.11
+ApexDestruction.LastCompileMethod=External
+ApexDestructionEditor.TimeStamp=2019.04.08-20.29.11
+ApexDestructionEditor.LastCompileMethod=External
 DialoguePlugin.TimeStamp=2019.05.19-18.43.49
 DialoguePlugin.LastCompileMethod=Unknown
 DialoguePluginEditor.TimeStamp=2019.05.19-18.43.51
@@ -5662,7 +5664,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -5670,26 +5672,26 @@ LastLogListing=PIE
 /Game/Dialogs=(R=0.500000,G=0.000000,B=0.325782,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon;
-RecentlyPlaced=/Game/Will/Remove_Area1_Blocker.Remove_Area1_Blocker;
-RecentlyPlaced=/Game/Will/Miner.Miner;
-RecentlyPlaced=/Game/Josh/AnimationsTest/Heavy_Slam.Heavy_Slam;
-RecentlyPlaced=/Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble;
-RecentlyPlaced=/Game/Will/Destructable_Barrel.Destructable_Barrel;
+RecentlyPlaced=/Game/Models/finishedassets/create_1/crate-david-14-01-19.crate-david-14-01-19;
+RecentlyPlaced=/Game/Models/Dylan/BallandChain1_Dylan_10-01-19__1_.BallandChain1_Dylan_10-01-19__1_;
+RecentlyPlaced=/Game/Models/Ben/small_vase_Ben_Wilkinson_09-01-19.small_vase_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/vase_undamaged_Ben_Wilkinson_09-01-19.vase_undamaged_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Ben/vase_light_damage_Ben_Wilkinson_09-01-19.vase_light_damage_Ben_Wilkinson_09-01-19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_5_Dylan_09_01_19.Vase_5_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_4_Dylan_09_01_19.Vase_4_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_3_Dylan_09_01_19.Vase_3_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_2_Dylan_09_01_19.Vase_2_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/Dylan/Vase_1_Dylan_09_01_19.Vase_1_Dylan_09_01_19;
+RecentlyPlaced=/Game/Models/finishedassets/torch/walltorch.walltorch;
+RecentlyPlaced=/Game/Models/finishedassets/weapontack/WR_Un.WR_Un;
+RecentlyPlaced=/Game/Models/finishedassets/table/Table.Table;
+RecentlyPlaced=/Game/Models/finishedassets/equipmentarea/table.table;
+RecentlyPlaced=/Game/Models/finishedassets/shield/shield.shield;
 RecentlyPlaced=/Game/rubble/Rubble_Pile.Rubble_Pile;
-RecentlyPlaced=/Game/Foliage/Crystals/Blue-strangeCrystal.Blue-strangeCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Pink-strangeCrystal.Pink-strangeCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Pink-PurpleCrystal.Pink-PurpleCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/StrangeCrystal.StrangeCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Strange-PurpleCrystal.Strange-PurpleCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Strange-BlueCrystal.Strange-BlueCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Purple-BlueCrystal.Purple-BlueCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Blue-PinkCrystal.Blue-PinkCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/Blue-purpleCrystal.Blue-purpleCrystal;
-RecentlyPlaced=/Game/Foliage/Crystals/ExposedCrystalstrange.ExposedCrystalstrange;
-RecentlyPlaced=/Game/Foliage/Crystals/ExposedCrystalPurple.ExposedCrystalPurple;
-RecentlyPlaced=/Game/Foliage/Crystals/ExposedCrystalBlue.ExposedCrystalBlue;
-RecentlyPlaced=/Game/Foliage/Crystals/CrytalshardClusterPurple1.CrytalshardClusterPurple1;
+RecentlyPlaced=/Game/Models/finishedassets/oven/Oven_Unwrapped__1_.Oven_Unwrapped__1_;
+RecentlyPlaced=/Game/Models/finishedassets/flowers/MediumCactus.MediumCactus;
+RecentlyPlaced=/Game/Models/finishedassets/flowers/LargeCactus.LargeCactus;
+RecentlyPlaced=/Game/Models/finishedassets/barrel/LP_barrel.LP_barrel;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -5745,26 +5747,26 @@ bFilterTranslucent=True
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Will/Remove_Area1_Blocker
-MRUItem1=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem2=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem3=/Game/Josh/AnimationsTest/Heavy_Slam
-MRUItem4=/Game/Josh/Skinned_Player
-MRUItem5=/Game/Will/Miner
-MRUItem6=/Game/Will/Area1_Blocker_MinableRubble
-MRUItem7=/Game/Levels/Area1-Rework
-MRUItem8=/Game/Dialogs/MyDialogueWidget
-MRUItem9=/Game/Dialogs/MyReplyWidget
-MRUItem10=/DialoguePlugin/UI/DemoReplyWidget
-MRUItem11=/DialoguePlugin/UI/DemoDialogueWidget
-MRUItem12=/Game/Will/Destructable_Barrel
-MRUItem13=/Game/Models/finishedassets/barrel/LP_barrel_DM
-MRUItem14=/Game/EnemyAgent/CorruptedSlave
-MRUItem15=/Game/Foliage/Crystals/CrytalShard-blue
-MRUItem16=/Game/Foliage/Crystals/CrytalshardClusterBlue
-MRUItem17=/Game/Foliage/Crystals/ExposedCrystalstrange
-MRUItem18=/Game/Foliage/Crystals/CrytalshardClusterPurple1
-MRUItem19=/Game/Models/finishedassets/trent/tent_open_low
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/rubble/Rubble_Pile
+MRUItem2=/Game/Will/Area1_Blocker_MinableRubble
+MRUItem3=/Game/Levels/Area1-Rework
+MRUItem4=/Game/Models/Jack/Bag_of_Food_1_Unwrapped
+MRUItem5=/Game/Levels/Area2-MarketMeshStart
+MRUItem6=/Game/Levels/texturedzoo
+MRUItem7=/Game/Will/Remove_Area1_Blocker
+MRUItem8=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem10=/Game/Josh/AnimationsTest/Heavy_Slam
+MRUItem11=/Game/Josh/Skinned_Player
+MRUItem12=/Game/Will/Miner
+MRUItem13=/Game/Dialogs/MyDialogueWidget
+MRUItem14=/Game/Dialogs/MyReplyWidget
+MRUItem15=/DialoguePlugin/UI/DemoReplyWidget
+MRUItem16=/DialoguePlugin/UI/DemoDialogueWidget
+MRUItem17=/Game/Will/Destructable_Barrel
+MRUItem18=/Game/Models/finishedassets/barrel/LP_barrel_DM
+MRUItem19=/Game/EnemyAgent/CorruptedSlave
 
 [WidgetTemplatesExpanded]
 Extra=False
